# Voice_gpt_agent

./: .gitignore
backend/: .dockerignore  .pre-commit-config.yaml  README.md  env.example  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  endpoints.py  websocket.py
backend/app/core/: config.py  config_local.py  dependencies.py  exceptions.py  logging.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/services/: audio_processor.py  base.py  chat_service.py  local_chat_service.py  session_manager.py  speech_to_text.py  text_to_speech.py
backend/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_basic.py  test_simple_api.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/features/: AudioWaveform.tsx  ChatInterface.tsx  ChatMessage.tsx  VoiceRecorder.tsx  index.ts
frontend/src/components/layout/: Header.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  index.ts
frontend/src/hooks/: useAudioAnalyzer.ts  useVoiceRecording.ts
frontend/src/services/api/: chatService.ts  client.ts
frontend/src/stores/: chatStore.ts
frontend/src/types/: api.ts  audio.ts  chat.ts
frontend/src/utils/: constants.ts  helpers.ts
